--- a/nodemailer/package.json
+++ b/nodemailer/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node server/index.js",
-    "dev": "nodemon server/index.js"
+    "start": "node api/send-photo.js",
+    "dev": "nodemon api/send-photo.js"
   },
   "keywords": [],
   "author": "",
