--- a/photobooth/package.json
+++ b/photobooth/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/blob": "^1.1.1",
     "bootstrap": "^5.3.5",
+    "dotenv": "^16.5.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0"
@@ -25,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "nodemon": "^3.1.10",
+    "react-error-overlay": "^6.0.9",
     "vite": "^6.3.1"
   }
 }
