--- a/photobooth/package.json
+++ b/photobooth/package.json
@@ -13,6 +13,7 @@
     "@vercel/blob": "^1.1.1",
     "bootstrap": "^5.3.5",
     "dotenv": "^16.5.0",
+    "googleapis": "^153.0.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0"
