--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -26,8 +26,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "nodemon": "^3.1.10",
     "react-error-overlay": "^6.0.9",
-    "vite": "^6.3.1"
+    "vercel": "^48.9.1",
+    "vite": "^7.2.2"
   }
 }
